<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="?attr/actionBarSize"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="?attr/actionBarSize"
    android:paddingEnd="?attr/actionBarSize"
    tools:ignore="RtlSymmetry">
    <TextView
        android:layout_gravity="center"
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resto1"
        android:textSize="20sp" />

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:textSize="20sp" />

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/service_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_service_quality"
        android:textSize="20sp" />

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/food_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_food_quality"
        android:textSize="20sp" />

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_average_price"
        android:textSize="20sp" />

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/stars_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Note"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="455dp">

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/modify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deleteButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>




