<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/wp9233556">


    <EditText
        android:id="@+id/editTextFirstName"
        android:background="@color/blue_light"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:autofillHints="first name"
        android:hint="@string/label_first_name"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:required="true" />

    <EditText
        android:id="@+id/editTextLastName"
        android:background="@color/blue_light"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/label_last_name"
        android:layout_marginTop="15sp"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:required="true" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:background="@color/blue_light"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints="phone"
        android:hint="@string/label_phone_number"
        android:inputType="phone"
        android:layout_marginTop="15sp"
        android:required="true"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_marginTop="15sp"
        android:background="@color/blue_light"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:required="true"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_marginTop="4sp"
        android:text="@string/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corner_view"/>
</LinearLayout>
